<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAA556"
    android:backgroundTint="#DAA556"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/see"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/see"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="135dp"
        android:text="@string/text1"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:textAlignment="center"
        android:textSize="26sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/see"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/me3"
        app:layout_constraintVertical_bias="0.512" />

    <ImageView
        android:id="@+id/me"
        android:layout_width="173dp"
        android:layout_height="206dp"
        android:contentDescription="@string/me"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.431"
        app:srcCompat="@drawable/img" />

    <ImageView
        android:id="@+id/me2"
        android:layout_width="173dp"
        android:layout_height="206dp"
        android:contentDescription="@string/me2"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toEndOf="@+id/me"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.491"
        app:srcCompat="@drawable/img" />

    <ImageView
        android:id="@+id/me3"
        android:layout_width="173dp"
        android:layout_height="206dp"
        android:contentDescription="@string/me3"
        app:layout_constraintBottom_toTopOf="@+id/see"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.448"
        app:srcCompat="@drawable/img" />

</androidx.constraintlayout.widget.ConstraintLayout>